--- a/drive/configs/ear/drive_config.json
+++ b/drive/configs/ear/drive_config.json
@@ -15,6 +15,5 @@
         "--blackbox-on-beer",
         "--hinting-scope=test-mv-ublock"
         ],
-    "save_screenshots": false,
-    "ublock_path": "ublock_origin.crx"
+    "save_screenshots": false
 }
