--- a/drive/configs/ear/drive_config.json
+++ b/drive/configs/ear/drive_config.json
@@ -6,8 +6,8 @@
     "alternate_sparrow_chromiumlike": true,
     "alternate_warm_cold_cache": true,
     "poll_download_speed": false,
-    "test_label_prefix": "test_mv_ublock",
-    "sparrow_only_switches": [],
+    "test_label_prefix": "mv_no_cookie_defer_any",
+    "sparrow_only_switches": ["--sparrow-enable-experimental=do-not-cookiedefer-any"],
     "common_switches": [
         "--request-beer-ack",
         "--hinting-scope=test-mv-ublock"
