--- a/drive/configs/ear/drive_config.json
+++ b/drive/configs/ear/drive_config.json
@@ -7,7 +7,7 @@
     "alternate_warm_cold_cache": true,
     "poll_download_speed": false,
     "test_label_prefix": "mv_early_navigation_experimental",
-    "sparrow_only_switches": ["--sparrow-enable-experimental=early-navigation-prefetch],
+    "sparrow_only_switches": ["--sparrow-enable-experimental=early-navigation-prefetch"],
     "common_switches": [
         "--request-beer-ack",
         "--hinting-scope=test-mv-ublock"
